# sleef

./: .gitignore  .gitmodules  .travis.yml  .travis.yml.org  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.nested  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Config.cmake.in  Configure.cmake  JenkinsFile  Jenkinsfile  Jenkinsfile.backup  Jenkinsfile.bak  LICENSE  Makefile  Makefile.vc  README  README.adoc  README.md  SPECIFICATION  SUSTAINABILITY.md  aarch64-toolchain.cmake  appveyor.yml  appveyor.yml.disabled  bumpversion.sh  config.mk  sleef-config.h.in  travis.yml.disabled  updateCygwin.bat
.github/: PULL_REQUEST_TEMPLATE.md
debian/: changelog  control  copyright  rules
doc/: SPECIFICATION  build-with-cmake.md  sleeflogo.pptx
docs/: CMakeLists.txt  Gemfile  README.md  _config.yml  aarch32.xhtml  aarch64.xhtml  additional.xhtml  benchmark.xhtml  build-with-cmake.md  compile.xhtml  cuda.xhtml  dft.xhtml  hellocuda.cu  hellocudaquad.cu  hellocudaquad2.cu  index.xhtml  machinmsvc.c  misc.xhtml  ph.c  ppc64.xhtml  purec.xhtml  quad.xhtml  quadaarch64.xhtml  quadcuda.xhtml  quadppc64.xhtml  quads390x.xhtml  quadx86.xhtml  s390x.xhtml  sleeflogo.pptx  sophomore.c  sophomore2.c  tutorial.c  x86.xhtml
docs/src/: CMakeLists.txt  CMakeLists.txt.nested  hellocudaquad.cu  machinx86.c
gencoef/: Makefile  gencoefdp.c  simplexfr.c
include/: Makefile  sleefdft.h
java/: IUT.java  Makefile
lib/: Makefile  Makefile.vc  libsleefdftstatic.mri  libsleefstatic.mri  symbols.aarch64.org  symbols.x86_64.org  symbols.x86_64.withavx512f.org
purec/: Makefile  Makefile.icc  iut.c  nonnumber.h  sleef.h  sleefdp.c  sleefsp.c  stoptester2.sh  tester2.c  tester2f.c
scripts/: install-linaro-toolchain.sh
simd/: Makefile  Makefile.aarch32  Makefile.arm  Makefile.clang  Makefile.icc  dd.h  df.h  helperavx.h  helperavx2.h  helperavx512f.h  helperclangvec.h  helperfma4.h  helperneon.h  helperneon32.h  helpersse2.h  iut.c  nonnumber.h  sleefsimd.h  sleefsimddp.c  sleefsimdsp.c  starttester2.sh  stoptester2.sh  tester2fsimd.c  tester2simd.c
src/: CMakeLists.txt  Makefile
src/arch/: Makefile  helperadvsimd.h  helperavx.h  helperavx2.h  helperavx2_128.h  helperavx512f.h  helperneon32.h  helperneon32.h.old  helperpower_128.h  helperpurec.h  helperpurec_scalar.h  helperrvv.h  helpers390x_128.h  helpersse2.h  helpersve.h  helpervecext.h
src/benchmarks/: CMakeLists.txt  README.md  benchmark_callers.hpp  benchmark_templates.hpp  benchsleef.cpp  gen_input.hpp
src/common/: CMakeLists.txt  Makefile  Makefile.vc  addSuffix.c  arraymap.c  arraymap.h  common.c  common.h  commonfuncs.h  commonxx.cpp  compat.h  copycat.c  countulp.hpp  dd.h  df.h  f128util.h  keywords.txt  keywords_cuda.txt  misc.h  qtesterutil.c  qtesterutil.h  quaddef.h  testerutil.c  testerutil.h  tryext.cpp
src/dft/: CMakeLists.txt  Makefile  Makefile.unroll  Makefile.unroll.vc  Makefile.vc  compat.h  dft.c  dft.cpp  dftcommon.c  dftcommon.cpp  dftcommon.h  dftcommon.hpp  flockcompat.h  mkdispatch.c  mkunroll.c  serializer.hpp  unroll0.cpp.in  unroll0.org  unroll1.cpp.in  unroll2.cpp.in  vectortype.h  vectortype.hpp
src/dft-tester/: CMakeLists.txt  Makefile  Makefile.vc  bench1D.c  bench1d.c  bench1d.cpp  dftbench.cpp  fftwtest1D.c  fftwtest1d.c  fftwtest2D.c  fftwtest2d.c  measuredft.c  naivetest.c  pi_fft.h  roundtriptest1d.c  roundtriptest2d.c  runtester.sh  test_dftplanner.cpp  tutorial.c
src/gencoef/: dp.h  gencoef.c  mkrempitab.c  simplexfr.c
src/libm/: CMakeLists.txt  GenerateSleefHeader.cmake.in  Makefile  Makefile.vc  addSuffix.c  dd.h  df.h  dispatcher.h  dispavx.c.org  disppower_128.c.org  disps390x_128.c.org  dispscalar.c.org  dispscalar_footer.c.org  dispsse.c.org  estrin.h  funcproto.h  generate.cmake  keywords.txt  keywords_cuda.txt  mkalias.c  mkdisp.c  mkmasked_gnuabi.c  mkrename.c  mkrename_gnuabi.c  mkrename_llvm.c  mkstatic.c  norename.h  rempitab.c  rename.h  rename_llvm.h  sleef.pc.in  sleefdp.c  sleeffma.cpp  sleefinline_cuda_header.h.org  sleefinline_header.h.org  sleefinline_header.h.org.in  sleefld.c  sleeflibm.h.org  sleeflibm_footer.h.org  sleeflibm_header.h.org  (+7 more)
src/libm-benchmarks/: CMakeLists.txt  Makefile  ProcessData.java  README.md  bench.h  benchlibm.cpp  benchmark_callers_libm.hpp  benchmark_templates.hpp  benchsleef.c  benchsleef128.c  benchsleef256.c  benchsleef512.c  benchsvml.c  benchsvml128.c  benchsvml256.c  benchsvml512.c  gen_input.hpp  type_defs.hpp
src/libm-benchmarks/plot-scripts/: Makefile  benchsvml.c  benchsvml128.c  benchsvml256.c  benchsvml512.c
src/libm-benchmarks/plot-tool/: plot_results.py  plotter.py  preprocessing.py  preprocessing_validators.py  requirements.txt
src/libm-plot/: Makefile  bench.h  benchsleef.c  benchsleef128.c  benchsleef256.c  benchsleef512.c  benchsvml.c  benchsvml512.c  measure.sh
src/libm-tester/: CMakeLists.txt  Makefile  Makefile.tester  Makefile.vc  autovec-fastmath.c  autovec.c  bench.c  bench_a0.c  bench_s0.c  bench_s1.c  bench_s2.c  check_feature.c  check_feature.h  doNothing.c  finite_names_testing.c  gnuabi_compatibility.c  hash_cinz.txt  hash_finz.txt  iut.c  iutcuda.cu  iutsimd.c  iutsimdmain.c  psha2.hpp  psha2_capi.cpp  psha2_capi.h  runtester.sh  runtestersub0.sh  runtestersub1.sh  runtestersub2.sh  starttester2.sh  test_psha2.cpp  tester.c  tester2dp.c  tester2ld.c  tester2qp.c  tester2simddp.c  tester2simdsp.c  tester2sp.c  tester3.c  tester3main.c  (+7 more)
src/quad/: CMakeLists.txt  printf.c  qdispatcher.h  qdispscalar.c.org  qdispx2.c.org  qfuncproto.h  qmkdisp.c  qmkrename.c  rempitabqp.c  sleefquad_footer.h.org  sleefquad_header.h.org  sleefquad_header.h.org.in  sleefquadinline_cuda_header.h.org  sleefquadinline_cuda_header.h.org.in  sleefquadinline_footer.h.org  sleefquadinline_header.h.org  sleefquadinline_header.h.org.in  sleefsimdqp.c
src/quad-tester/: CMakeLists.txt  hash_printf.txt  qiutcuda.cu  qiutsimd.c  qiutsimdmain.c  qtester.c  qtester4simd.cpp  qtesterutil.c  qtesterutil.h  qutil.c  tester2printf.c  tester2simdqp.c  tester3printf.c
src/script/: abspath.sh  noflock.sh  testOnAppveyor.sh
tester/: Makefile  (+4 more)
(+131 files in other folders)
