include_directories("common")
include_directories("arch")

add_subdirectory("libm")
if (BUILD_TESTS)
  add_subdirectory("libm-tester")
endif()
add_subdirectory("common")

if (BUILD_DFT AND NOT MINGW AND NOT CMAKE_SYSTEM_PROCESSOR MATCHES "^(powerpc|ppc)64")
  add_subdirectory("dft")
  if (BUILD_TESTS)
    add_subdirectory("dft-tester")
  endif()
endif()
